# Matrices

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.h  matrix_util.cpp  matrix_util.h
src/: Timer.h  aocl_util.cpp  aocl_util.h  gemm.cpp  gemm.py  main.cpp  matrix.h  matrix_util.cpp  matrix_util.h  mkl_util.cpp  mkl_util.h
